# cpp-transport-catalogue

./: README.md
transport-catalogue/: CMakeLists.txt  Makefile  compile_commands.json  domain.cpp  domain.h  domain.hpp  firefox  geo.cpp  graph.h  graph.hpp  graph.proto  input_reader.cpp  input_reader.h  input_reader.hpp  json.cpp  json.h  json.hpp  json_builder.cpp  json_builder.h  json_builder.hpp  json_reader.cpp  json_reader.h  json_reader.hpp  main  main.cpp  makebase  map_renderer.cpp  map_renderer.h  map_renderer.hpp  map_renderer.proto  request_handler.cpp  request_handler.h  request_handler.hpp  requestbase  router.h  router.hpp  serialization.cpp  serialization.h  serialization.hpp  stat_reader.cpp  (+21 more)
transport-catalogue/.cache/clangd/index/: domain.cpp.41BC163003FF5A1E.idx  domain.h.2418C264E2530D64.idx  domain.hpp.7BB63F007D5D64C9.idx  geo.cpp.354CF84A013E347D.idx  geo.h.931A0368773E99BD.idx  geo.hpp.EC2CC4E4469BA7FB.idx  graph.h.B0C4B497650CD2BB.idx  graph.hpp.86557E9BBC6924BB.idx  input_reader.cpp.B7F961D9736F6A87.idx  svg.h.14E479B180F3B2F2.idx  (+39 more)
transport-catalogue/json/: filtered_in_test_20.json  filtered_out_test_20.json  make_base1.json  make_base2.json  make_base3.json  make_base4.json  myout_20.json  request_base1.json  request_base2.json  request_base3.json  test_output1.json  test_output2.json
transport-catalogue/json/opentests/: 1_make_base.json  1_process_requests.json  1_real_answer.json  2_make_base.json  2_process_requests.json  2_real_answer.json  3_real_answer.json
transport-catalogue/test_cases/: PartDCase19Input.txt  PartDCase19Output.txt  PartDCase20Output.txt  PatrDCase20Input.txt
transport-catalogue/txt/: in_test_26.txt  myout_26.txt  out_test_26.txt
